--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,8 +13,15 @@
     <script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
     <script src="bower_components/lumx/dist/lumx.js"></script>
     <script src="js/app.routes.js"></script>
-    <script src="js/app.controllers.js"></script>
-    <script src="js/app.services.js"></script>
+    <!--script src="js/app.controllers.js"></script-->
+    <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/pokemonCtrl.js"></script>
+    <script src="js/controllers/userCtrl.js"></script>
+    <!--script src="js/app.services.js"></script-->
+    <script src="js/services/authService.js"></script>
+    <script src="js/services/pokemonService.js"></script>
+    <script src="js/services/userService.js"></script>
     <script src="js/app.directives.js"></script>
     <script src="js/app.js"></script>
 
