--- a/public/css/style.css
+++ b/public/css/style.css
@@ -362,7 +362,7 @@
    -ms-transform: translate(50%, -50%) rotate(0deg);
 }
 
-body {
+.body {
    background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
    background-position: center;
    background-size: cover;
@@ -371,10 +371,6 @@ body {
    font-family: 'Roboto', sans-serif;
 }
 
-body,
-html {
-   overflow: hidden;
-}
 
 .materialContainer {
    width: 100%;
