--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,6 +6,7 @@
     <title>Pokemon Admin</title>
     <link rel="stylesheet" href="bower_components/lumx/dist/lumx.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="css/style.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/velocity.js"></script>
     <script src="bower_components/moment/min/moment-with-locales.js"></script>
@@ -28,26 +29,7 @@
 </head>
 
 <body>
-
-    <div class="p+">
-          <div class="card">
-              <div class="card__actions" ng-controller="mainCtrl as main">
-                <lx-button lx-color="orange" lx-type="flat" ng-click="main.goTo('/login')">Home</lx-button>
-                  <lx-button lx-color="orange" lx-type="flat" ng-click="main.goTo('/users')">Usuarios</lx-button>
-                  <lx-button lx-color="orange" lx-type="flat" ng-click="main.goTo('/pokemons')">Pokemons</lx-button>
-              </div>
-              <div flex-container="row">
-                  <div flex-item flex-container="column">
-                      <div flex-item>
-                          <div class="p+">
-                              <div ng-view></div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-
+    <div ng-view></div>
 </body>
 
 </html>
