create mant users

--- a/public/views/pages/user.html
+++ b/public/views/pages/user.html
@@ -1,6 +1,96 @@
-<div>
-  <h1>user Page</h1>
-  <p>
-    {{ user.message }}
-  </p>
+<div class="p+">
+    <div class="card">
+        <div flex-container="row">
+            <div flex-item flex-container="column">
+                <div flex-item>
+                    <div class="p+">
+                        <div class="data-table-container">
+                            <header class="data-table-header">
+                                <div class="data-table-header__label">
+                                    <span class="fs-title">Mantenimiento Users</span>
+                                </div>
+                                <div class="toolbar__right">
+                                    <lx-search-filter lx-closed="true">
+                                        <input type="text" ng-model="user.search.name">
+                                    </lx-search-filter>
+                                    <lx-button lx-type="fab" ng-click="user.openDialog()"><i class="mdi mdi-plus"></i> Agregar</lx-button>
+                                </div>
+                            </header>
+
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>id</th>
+                                        <th>nombre</th>
+                                        <th>usuario</th>
+                                        <th>
+                                            <i class="mdi mdi-comment-text"></i>
+                                            <span>Operaciones</span>
+                                        </th>
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                    <tr ng-repeat="trainer in user.users | filter:user.search">
+                                        <td>{{trainer._id}}</td>
+                                        <td>{{trainer.name}}</td>
+                                        <td>{{trainer.username}}</td>
+                                        <td>
+                                            <lx-button lx-type="raised" lx-color="green">Editar</lx-button>
+                                            <lx-button lx-type="raised" lx-color="red">Eliminar</lx-button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<lx-dialog id="modal">
+    <lx-dialog-header>
+        <div class="toolbar bgc-primary pl++">
+            <span class="toolbar__label tc-white fs-title">
+                Agregar user
+            </span>
+        </div>
+    </lx-dialog-header>
+
+    <lx-dialog-content>
+        <lx-tab-pane>
+            <div class="p++">
+                <p>Agregar Usuario</p>
+                <div flex-container="row" flex-gutter="24">
+                    <div flex-item>
+                        <lx-text-field lx-label="Nombre">
+                            <input type="text" ng-model="user.form.name" ng-required>
+                        </lx-text-field>
+                    </div>
+
+                    <div flex-item>
+                        <lx-text-field lx-label="Usuario">
+                            <input type="text" ng-model="user.form.username" ng-required>
+                        </lx-text-field>
+                    </div>
+                </div>
+                <div flex-container="row" flex-gutter="24">
+                    <div flex-item>
+                        <lx-text-field lx-label="Password">
+                            <input type="password" ng-model="user.form.password" ng-required>
+                        </lx-text-field>
+                    </div>
+
+                </div>
+                <lx-button lx-color="green" ng-click="user.submitForm(user.form)" >Button</lx-button>
+            </div>
+            </div>
+        </lx-tab-pane>
+    </lx-dialog-content>
+
+    <lx-dialog-footer>
+        <lx-button lx-color="black" lx-type="flat" lx-dialog-close>Cancel</lx-button>
+        <lx-button lx-type="flat" lx-dialog-close >Ok</lx-button>
+    </lx-dialog-footer>
+</lx-dialog>
