delete mant users

--- a/public/views/pages/user.html
+++ b/public/views/pages/user.html
@@ -37,7 +37,7 @@
                                         <td>{{trainer.username}}</td>
                                         <td>
                                             <lx-button lx-type="raised" lx-color="green">Editar</lx-button>
-                                            <lx-button lx-type="raised" lx-color="red">Eliminar</lx-button>
+                                            <lx-button lx-type="raised" ng-click="user.deleteUser(trainer._id)" lx-color="red">Eliminar</lx-button>
                                         </td>
                                     </tr>
                                 </tbody>
