--- a/public/views/pages/user.html
+++ b/public/views/pages/user.html
@@ -1,3 +1,9 @@
+<div class="toolbar" ng-controller="mainCtrl as main">
+    <div class="toolbar__left mr++">
+        <lx-button lx-size="l" lx-color="black" lx-type="icon" ng-click="main.clickLogout()"><i class="mdi mdi-menu"></i></lx-button>
+    </div>
+    <span class="toolbar__label fs-title">ACCESS ADMIN</span>
+</div>
 <div class="p+">
     <div class="card">
         <div flex-container="row">
