--- a/public/views/pages/login.html
+++ b/public/views/pages/login.html
@@ -1,21 +1,27 @@
 <div class="body">
-  <div class="materialContainer">
+  <div class="materialContainer" ng-controller="mainCtrl as main">
       <div class="box">
           <div class="title">LOGIN</div>
-          <div class="input">
-              <label for="name">Username</label>
-              <input type="text" name="name" id="name">
-              <span class="spin"></span>
+              <br>
+              <br>
+              <br>
+              <br>
+              <div flex-item>
+                  <lx-text-field lx-label="username">
+                      <input type="text" ng-model="main.form.username" ng-required>
+                  </lx-text-field>
+              </div>
+            <div flex-item>
+                <lx-text-field lx-label="password">
+                    <input type="text" ng-model="main.form.password" ng-required>
+                </lx-text-field>
+            </div>
+
+          <div class="button login" >
+              <button ng-click="main.clickLogin(main.form)" ><span>GO</span> <i class="fa fa-check"></i></button>
+              <a href="" class="pass-forgot" ng-if="main.loggeIn">Forgot your password?</a>
           </div>
-          <div class="input">
-              <label for="pass">Password</label>
-              <input type="password" name="pass" id="pass">
-              <span class="spin"></span>
-          </div>
-          <div class="button login" ng-controller="mainCtrl as main">
-              <button ng-click="main.goTo('/pokemons')"><span>GO</span> <i class="fa fa-check"></i></button>
-          </div>
-          <a href="" class="pass-forgot">Forgot your password?</a>
+
       </div>
 
       <div class="overbox">
